[metadata]
name = Liara
version = attr: liara.__version__
url = http://shelter13.net/projects/Liara
license = BSD 2-Clause License
author = Matthäus G. Chajdas
author_email = dev@anteru.net

description = Static page generator
long_description = file: README.md
long_description_content_type = text/markdown

platforms = any
classifiers = 
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP

[options]
python_requires = >= 3.8
packages = find:

install_requires =
    beautifulsoup4~=4.7
    blinker~=1.5
    click~=8.0
    dateparser~=1.0
    humanfriendly~=10.0
    Jinja2~=3.0
    libsass~=0.21
    lxml~=4.6
    Mako~=1.2
    Markdown~=3.3
    Pillow~=9.2
    Pygments~=2.10
    pymdown-extensions~=9.0
    python-slugify~=7.0
    PyYAML~=6.0
    requests~=2.25
    tomli~=2.0; python_version < "3.11"
    treelib~=1.5
    tzlocal~=4.2

[options.packages.find]
where = .
exclude =
    *.test
    test.*
    *.test.*

[options.entry_points]
console_scripts =
    liara = liara.cmdline:main

[options.extras_require]
dev =
    flake8
    flake8-mypy
redis =
    redis~=3.5.3
docs =
    Sphinx~=6.0
    furo
