[metadata]
name = Liara
version = attr: liara.__version__
url = http://shelter13.net/projects/Liara
license = BSD 2-Clause License
author = Matthäus G. Chajdas
author_email = dev@anteru.net

description = Static page generator
long_description = file: README.md
long_description_content_type = text/markdown

platforms = any
classifiers = 
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP

[options]
python_requires = >= 3.10
packages = find:

install_requires =
    beautifulsoup4~=4.12
    blinker~=1.7
    click~=8.1
    dateparser~=1.2
    humanfriendly~=10.0
    Jinja2~=3.1
    libsass~=0.21
    lxml~=5.1
    Mako~=1.3
    Markdown~=3.5
    Pillow~=10.2
    Pygments~=2.18
    pymdown-extensions~=10.0
    python-slugify~=8.0
    PyYAML~=6.0
    requests~=2.31
    tomli~=2.0; python_version < "3.11"
    treelib~=1.7
    tzlocal~=5.2

[options.packages.find]
where = .
exclude =
    *.test
    test.*
    *.test.*

[options.entry_points]
console_scripts =
    liara = liara.cmdline:main

[options.extras_require]
dev =
    flake8
    flake8-mypy
    tox
redis =
    redis~=5.0
docs =
    Sphinx~=8.0
    furo
